kubernetes/strimzi-kafka/ingress-hoen-bridge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoen-bridge-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - bridge.kafka.rke2-queen
    secretName: hoen-bridge-tls
  rules:
  - host: bridge.kafka.rke2-queen
    http:    
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hoen-bridge-bridge-service
            port:
              number: 8080
